--- a/certificates/index.html
+++ b/certificates/index.html
@@ -63,6 +63,14 @@
       <div class="portfolio-items">
 
         <figure>
+          <a href="../img/PDF document.pdf" target="_blank"><img src="../img/webdev-mimo-cert.jpg" alt="Mimo front end development certificate"
+              class="portfolio-example glow" /></a>
+          <a href="../img/PDF document.pdf" target="_blank">
+            <h3>Frontend Development</h3>
+          </a>
+        </figure>
+        
+        <figure>
           <a href="../img/html-certificate.pdf" target="_blank"><img src="../img/html-cert.png"
               alt="Unplugged Sample Website" class="portfolio-example glow" /></a>
           <a href="../img/html-certificate.pdf" target="_blank">
