--- a/certificates/index.html
+++ b/certificates/index.html
@@ -69,6 +69,14 @@
             <h3>Frontend Development</h3>
           </a>
         </figure>
+
+        <figure>
+          <a href="../img/sql-cert.pdf" target="_blank"><img src="../img/sql-cert.pdf"
+              alt="Mimo front end development certificate" class="portfolio-example glow" /></a>
+          <a href="../img/sql-cert.pdf" target="_blank">
+            <h3>SQL</h3>
+          </a>
+        </figure>
         
         <figure>
           <a href="../img/html-certificate.pdf" target="_blank"><img src="../img/html-cert.png"
